--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@carbon/charts-react": "^0.53.1",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,6 +13,7 @@
     "@types/react-dom": "^17.0.11",
     "@xstyled/styled-components": "^3.1.2",
     "axios": "^0.24.0",
+    "d3": "^7.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-minimal-pie-chart": "^8.2.0",
